<resources>
    <string name="app_name">What\'s for Dinner?</string>
    <string name="name">Name</string>
    <string name="password">Password:</string>
    <string name="username">Username:</string>
    <string name="login_as_admin">Login as Admin</string>
    <string name="login_as_user">Login as User</string>
    <string name="citrus">citrus</string>
    <string name="browse_recipes">Browse Recipes</string>
    <string name="create_recipe">Create Recipe</string>
    <string name="my_week">My Week</string>
    <string name="grocery_list">Grocery List</string>
    <string name="action_settings">Settings</string>
    <string name="category_prompt">Choose a Category</string>
    <string name="name_of_recipe">Name of Recipe:</string>
    <string name="instructions">Instructions:</string>
    <string name="servings">Servings:</string>
    <string name="add_recipe">Add Recipe</string>
    <string name="add_an_ingredient">Add an Ingredient:</string>
    <string name="how_much">How much?</string>
    <string name="add_ingredient">Add Ingredient</string>
    <string name="search">Search</string>
    <string name="textview">TextView</string>
    <string name="minus">-</string>
    <string name="add">+</string>
    <string name="delete">Delete</string>
    <string-array name="category_array">
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Dinner</item>
        <item>Dessert</item>
        <item>InstantPot</item>
        <item>Slow Cooker</item>
        <item>Kids Menu</item>
        <item>Beef</item>
        <item>Chicken</item>
        <item>5 Minute Meal</item>
        <item>Vegan</item>
        <item>Vegetarian</item>
        <item>Make Ahead Meal</item>
        <item>All</item>
    </string-array>
    <string-array name="measurement_array">
        <item>Tsp</item>
        <item>Tbsp</item>
        <item>Cup</item>
        <item>Item</item>
        <item>Slice</item>
    </string-array>
    <string-array name="fractions_array">
        <item>0</item>
        <item>1/16</item>
        <item>1/8</item>
        <item>1/4</item>
        <item>1/3</item>
        <item>1/2</item>
        <item>2/3</item>
        <item>3/4</item>
    </string-array>
    <string-array name="digit_array">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
    </string-array>
    <string-array name="type_array">
        <item>Produce</item>
        <item>Dairy</item>
        <item>Meat</item>
        <item>Frozen</item>
        <item>Bakery</item>
        <item>Canned and Dry Goods</item>
        <item>Spices</item>
        <item>Pasta and Rice</item>
        <item>Oils and Sauces</item>
        <item>Snacks and Crackers</item>
        <item>Drinks</item>
    </string-array>
    <string name="title_activity_grocery_page">GroceryPage</string>
    <string name="large_text_user">
        1.       To view available recipes, click the “Browse Recipes” button.\n\n
        2.      To view a recipe’s details from the list, click the recipe’s name.\n\n
        3.       To add the recipe to your week, click the button with the “+” sign on it.\n\n
        4.      To see what recipes, you’ve chosen for the week, click the “My Week” button.\n\n
        5.       To remove a recipe from your week, click the recipe’s name. After clicking the name, you
                will see the recipe description. From there, click the button with the “-“ sign on it to remove
                the recipe from your week.\n\n
        6.        To search for recipes based on tags, click the “Search” button.\n\n
        7.      To choose a tag to search by, click the dropdown menu on the search page. Once you see the dropdown
                with the different tag options, click the one you are looking for. Once you’ve selected the tag
                you want to search for, click “Search”. The app will then display all recipes with tags that match what you selected.\n\n
        8.      To see what ingredients have been added to your shopping list for the week, click the “Grocery
        List” button.\n\n
        9.       The grocery list will combine like ingredients and display them in a total amount that
        is equal to the minimum required amount to make all recipes chosen for the week.\n\n
        10.       To add individual items to your grocery list, click the "Add Grocery Item" button.\n\n
        11.       To remove items added with the "Add Grocery Item" button, click the "Delete Grocery List button. This will not clear ingredients added from recipes selected from browse recipes.\n\n12.  In order to completely clear the grocery list, there can be no recipes added to "My Week".\n\n\n\n\n\n


    </string>
    <string name="push_to_users">Push to Users</string>
    <string name="faq">FAQ</string>
    <string name="title_activity_faq_user_page">FaqUserPage</string>
    <string name="faqs">FAQs</string>
    <string name="title_activity_faq_admin_page">FaqAdminPage</string>
    <string name="large_text_admin">
        1.       To view available recipes, click the “Browse Recipes” button.\n\n
        2.      To view a recipe from the list, click the recipe’s name.\n\n
        3.       To add the recipe to your week, click the button with the “+” sign on it.\n\n
        4.      To remove a recipe from the recipe list, click the “Delete” button.\n\n
        5.       To add a new recipe to the app, click the “Create Recipe” button.\n\n
        6.        To name the recipe, click on the line next to “Name of Recipe”. Once you’ve clicked
        on the line, a cursor will appear on the line. Simply type in the name of the recipe you want
        to make on this line to make the name for the recipe.\n\n
        7.      To choose a tag for the recipe, click the dropdown beneath “Name of Recipe”. A dropdown
        with a list of tags will appear. Select the tag you wish to give the recipe.\n\n
        8.      To enter a number of servings for a recipe, click on the line next to the word “Servings”.
        A cursor will appear on the line. Simply type in a number to show how many servings the recipe will make.\n\n
        9.        To add an ingredient to the recipe, click the button that says “Add Ingredient” that
        is next to the word “Instructions”.\n\n
        10.        To enter a name for an ingredient, click the line next to “Name” and a cursor will
        appear. Simply type the name of the ingredient into this line.\n\n
        11.      To choose a quantity for an ingredient, use the three dropdown tabs underneath the words “How Much?”.\n\n
        12.        The first tab under “How Much?” is for whole numbers. The second tab is for fractions.
        The third tab for choosing what size the ingredients come in (Tsp, Tbsp, Cup).\n\n
        13.    To choose a tag for the ingredient, click on the dropdown below the three tabs for “How Much?”.
        You will see a list of different tags for an ingredient and can choose which one best suits the ingredient you are adding.\n\n
        14.      Once all the details for the ingredient are filled in, click the button labeled “Add
        Ingredient” to add the finished ingredient to the recipe.\n\n
        15.      To add instructions to the recipe, click on the empty space below the “Add Ingredient”
        button and above the “Add Recipe” button. A keyboard will pop-up allowing you to type in the instructions for the recipe.\n\n
        16.      To add the recipe to the database once it is completed, click on the “Add Recipe” button
        at the bottom of the screen.\n\n
        17.      To see what recipes, you’ve chosen for the week, click the “My Week” button.\n\n
        18.        To remove a recipe from your week, click the recipe’s name. After clicking the name, you
        will see the recipe description. From there, click the button with the “-“ sign on it to remove the recipe from your week.\n\n
        19.       To search for recipes based on tags, click the “Search” button.\n\n
        20.        To choose a tag to search by, click the dropdown menu on the search page. Once you
        see the dropdown with the different tag options, click the one you are looking for. Once you’ve
        selected the tag you want to search for, click “Search”. The app will then display all recipes with tags that match what you selected.\n\n
        21.      To see what ingredients have been added to your shopping list for the week, click the “Grocery List” button.\n\n
        22.       The grocery list will combine like ingredients and display them in a total amount that
        is equal to the minimum required amount to make all recipes chosen for the week.\n\n
        23.       To add individual items to your grocery list, click the "Add Grocery Item" button.\n\n
        24.       To remove items added with the "Add Grocery Item" button, click the "Delete Grocery List button. This will not clear ingredients added from recipes selected from browse recipes.\n\n25.  In order to completely clear the grocery list, there can be no recipes added to "My Week".\n\n\n\n\n\n

    </string>
    <string name="todo">TODO</string>
    <string name="add_grocery_item">Add Grocery Item</string>
    <string name="delete_grocery_list">Delete Grocery List</string>


</resources>
