<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#d0aae6"
    tools:context="com.dinner.sarahgardiner.whatsfordinner.CreateRecipePage">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="141dp"
        android:layout_height="24dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/name_of_recipe"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/recipeName"
        app:layout_constraintEnd_toStartOf="@+id/recipeName"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/recipeName"
        android:layout_width="wrap_content"
        android:layout_height="39dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/Category"
        android:layout_width="336dp"
        android:layout_height="23dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        android:entries="@array/category_array"
        android:popupBackground="@android:color/darker_gray"
        android:prompt="@string/category_prompt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipeName" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="122dp"
        android:layout_height="23dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="24dp"
        android:text="@string/servings"
        android:textAlignment="textStart"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/recipeServings"
        app:layout_constraintEnd_toStartOf="@+id/recipeServings"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Category" />

    <EditText
        android:id="@+id/recipeServings"
        android:layout_width="wrap_content"
        android:layout_height="43dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/Category" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="115dp"
        android:layout_height="27dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="28dp"
        android:text="@string/instructions"
        android:textAlignment="textStart"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/recipeInstuctions"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/recipeInstuctions"
        android:layout_width="380dp"
        android:layout_height="297dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:singleLine="false"
        app:layout_constraintBottom_toTopOf="@+id/addRecipe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/addRecipe"
        android:layout_width="348dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:onClick="onSubmitClick"
        android:text="@string/add_recipe"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/addIngredient3"
        android:layout_width="235dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="41dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="14dp"
        android:onClick="onIngredientClick"
        android:text="@string/add_ingredient"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/recipeServings" />



</android.support.constraint.ConstraintLayout>
